// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type-paramters.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<FirstParam, SecondParam>;
type ShortName = Something<FirstParam, SecondParam>;

=====================================output=====================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<
  FirstParam,
  SecondParam
>;
type ShortName = Something<FirstParam, SecondParam>;

================================================================================
`;

exports[`type-paramters.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<FirstParam, SecondParam>;
type ShortName = Something<FirstParam, SecondParam>;

=====================================output=====================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<
  FirstParam,
  SecondParam
>;
type ShortName = Something<FirstParam, SecondParam>;

================================================================================
`;

exports[`type-paramters.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<FirstParam, SecondParam>;
type ShortName = Something<FirstParam, SecondParam>;

=====================================output=====================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<
  FirstParam,
  SecondParam
>;
type ShortName = Something<FirstParam, SecondParam>;

================================================================================
`;
